--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "tailwindcss": "^3.4.4",
     "tslib": "^2.6.3",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "vite": "^5.3.1",
+    "vite-aliases": "^0.11.7"
   },
   "keywords": [
     "game",
