--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "postcss": "^8.4.38",
     "svelte": "^4.2.18",
     "svelte-check": "^3.8.1",
-    "svelte-routing": "^2.13.0",
+    "svelte-spa-router": "^4.0.1",
     "tailwindcss": "^3.4.4",
     "tslib": "^2.6.3",
     "typescript": "^5.2.2",
